--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
@@ -80,7 +80,7 @@
       
     <!--start of column two-->
     <div class="col-md-4">
-      <div class="allif-details-card">
+      <div class="allif-details-card table-responsive">
         <!--start of the table here-->
       <table class="table allif-details-table table-layout">
         <tbody>
@@ -224,7 +224,7 @@
       
         <!--start of column two-->
         <div class="col-md-12">
-          <div class="allif-details-card ">
+          <div class="allif-details-card table-responsive">
             <!--start of the table here-->
             <table class="table table-layout allifmaal-full-table">
               <thead>
@@ -273,7 +273,7 @@
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
     <div class="table-content-description"> <a href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}" class="allif-table-links"> Scopes</a> </div>
-  <div class="allif-scroll-table"> 
+  <div class="allif-scroll-table table-responsive"> 
    
     <table class="table table-layout allifmaal-full-table">
     <thead>
